# NearClip

./: .gitignore  README.md
.github/workflows/: build.yml
core/: Cargo.toml
core/bindings/: Cargo.toml  build.rs
core/bindings/src/: lib.rs
core/clip_core/: Cargo.toml
core/clip_core/src/: ble.rs  lib.rs  pairing.rs  sync.rs
scripts/: justfile  pair_gui.py
