[package]
name = "clip_core_bindings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
clip_core = { path = "../clip_core", default-features = false }
tokio = { version = "1.38", default-features = false, features = ["net", "io-util", "rt-multi-thread"] }

[features]
ble = ["clip_core/ble"]

[build-dependencies]
cbindgen = "0.26"
