[package]
name = "clip_core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", default-features = false, features = ["net", "io-util", "rt-multi-thread"] }
btleplug = { version = "0.11", optional = true }
uuid = { version = "1", features = ["serde", "v4"], optional = true }
anyhow = { version = "1", optional = true }

[features]
ble = ["btleplug", "uuid", "anyhow"]
